--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body {
 	background-color: var(--lighter);
-	font-family: sans-serif;
+	font-family: Questrial, sans-serif;
 	margin: 88px 0px;
 }
 
