--- a/style.css
+++ b/style.css
@@ -187,3 +187,42 @@ img {
     -o-transition:      all 0.5s ease;
     -webkit-transition: all 0.5s ease;
 }
+
+.pfps {
+	display: grid;
+	grid-template-columns: auto auto;
+	grid-template-rows: auto auto auto;
+	row-gap: 1vh;
+	justify-content: center;
+	align-items: center;
+}
+
+.pfps img {
+	border-radius: 50%;
+	background-color: var(--main);
+}
+
+.pfps p {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 35px;
+	background-color: var(--darker);
+	color: white;
+	font-size: 200%;
+	text-align: center;
+	margin: 5vh 2vw;
+	padding: 1vh 2vw;
+	height: 40%;
+}
+
+@media (max-width: 850px) {
+	.pfps {
+		grid-template-columns: auto;
+		row-gap: .5vh;
+	}
+	.pfps p {
+		margin: 1vh;
+		border-radius: 15px;
+	}
+}
