--- a/base.css
+++ b/base.css
@@ -5,50 +5,63 @@
 	--darkest: #0A122A;
 }
 
-html {
-	background-color: var(--main);
-}
-
 body {
-	background-color: var(--lighter);
-    color: var(--darkest);
-	font-family: Questrial, sans-serif;
-	margin: 5vh 5vw;
-	padding: 2vh 4vw;
-	border-radius: 20px;
+	background-color: var(--darkest);
+	font-family: Atkinson Hyperlegible, sans-serif;
 }
 
-footer a {
-	font-family:sans-serif;
+footer { margin: .5%; }
+
+footer a, button {
 	border: none;
 	display: inline;
 	width: auto;
-	font-size: 150%;
-	padding: 7px;
-	margin: 10px;
-	background-color: var(--main);
+	font-size: x-large;
+	padding: 3px 7px;
+	margin: .5%;
 	color: white;
-	border-radius: 10px;
+	border: 3px solid var(--main);
+	background-color: var(--darkest);
 	text-decoration:none;
 }
 
+button { border-color: var(--lighter); }
+
 footer a:hover {
-	animation-name: darken;
+	animation-name: borderToLight;
 	animation-duration: 0.5s;
 	animation-fill-mode: forwards;
 }
 
-@keyframes darken {
+button:hover {
+	animation-name: borderToMain;
+	animation-duration: 0.5s;
+	animation-fill-mode: forwards;
+}
+
+@keyframes borderToLight {
 	100% {
-		color: white;
-		background-color: var(--darker);
-		transform: scale(1.1);
+		border-color: var(--lighter);
+		border-radius: 5px;
 	}
 }
 
-@keyframes lighten {
+@keyframes borderToMain {
+	100% {
+		border-color: var(--main);
+		border-radius: 15px;
+	}
+}
+
+@keyframes fillToLight {
 	100% {
 		color: var(--darker);
 		background-color: var(--lighter);
+	}
+}
+
+@keyframes textToMain {
+	100% {
+		color: var(--main);
 	}
 }
