--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ img {
 .pfps img {
 	border-radius: 50%;
 	background-color: var(--main);
-	height: 150px;
+	height: min(150px, 40vw);
 	margin: auto;
 }
 
@@ -244,12 +244,7 @@ p a:hover {
 
 @media (max-width: 850px) {
 	.pfps {
-		grid-template-columns: auto;
-		row-gap: .5vh;
-	}
-	.pfps p {
-		margin: 1vh;
-		border-radius: 15px;
+		flex-direction: column;
 	}
 
 	main {
